# InfraRisk

./: .env.example  .gitignore  ACTION_PLAN_DO_THIS_NOW.md  ALL_GAPS_CLOSED.md  API_REFERENCE.md  ARCHITECTURE.md  COMMIT_PHASE3.py  COMPLETION_SUMMARY.md  COMPLETION_SUMMARY.txt  COMPONENTS_ADDRESSED.md  COMPREHENSIVE_STATUS_ANALYSIS.md  CONTRIBUTING.md  CREDIT_COMMITTEE_SUMMARY.md  CURRENT_STATUS_ANALYSIS.md  DAY1_PROGRESS.md  DAY2_PROGRESS.md  DAY3_PROGRESS.md  DAY4_PROGRESS.md  DELIVERY_COMPLETE.md  DELIVERY_MANIFEST.md  DEPLOYMENT_GUIDE.md  DEPLOY_PHASE3.bat  DOCUMENTATION_INDEX.md  Dockerfile  EXECUTIVE_SUMMARY.md  FILES_INDEX.md  FILES_QUICK_START_INDEX.md  FINAL_CHECKLIST.md  FINAL_COMPLETION_SUMMARY.md  FINAL_DELIVERABLE.md  FINAL_STATUS_DASHBOARD.txt  FINAL_STATUS_SUMMARY_MAY19.md  FINAL_SUMMARY.md  GITHUB_PUSH_GUIDE_READY.md  GIT_COMMIT_STRATEGY.md  INSTALLATION.md  LICENSE  LOCAL_FILES_ADDRESS_GUIDE.md  MAINTENANCE.md  MODELS_INIT_TEMPLATE.py  (+167 more)
.devcontainer/: devcontainer.json
.dvc/: config
apps/: dashboard_v2_complete.py  p5_streamlit_app.py
config/: config.yaml
configs/: .coveragerc  .dockerignore
deliverables/: requirements_ml.txt  requirements_nlp.txt
deploy/: cloud_deploy.sh  k8s_deploy.sh
docs/: API.md  ARCHITECTURE.md  DATA_INTEGRATION.md  QUICKSTART.md  README.md  TECHNICAL_REPORT.md  api.md  api_swagger.py  architecture.md  credit_memo_1.md  credit_memo_2.md  index.md
examples/: api_example.py  train_models.py
notebooks/: 01_EDA_Infrastructure.ipynb  01_eda.md  01_infrastructure_eda.py  02_credit_risk.md  02_macro_eda.py  (+5 more)
(+135 files in other folders)
