[tool.poetry]
name = "infrariskai"
version = "0.1.0"
description = "Comprehensive Infrastructure Project Finance Platform with ML/DL"
authors = ["Kritvi0208"]
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/Kritvi0208/InfraRisk"

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.24.3"
pandas = "^2.0.3"
tensorflow = "^2.12.0"
torch = "^2.0.1"
fastapi = "^0.100.0"
streamlit = "^1.27.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-cov = "^4.1.0"
black = "^23.7.0"
flake8 = "^6.0.0"
mypy = "^1.4.1"
pre-commit = "^3.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ['py39', 'py310', 'py311']

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --cov=src --cov-report=html --cov-report=term-missing"
pythonpath = ["src"]
